[tool.poetry]
name = "newsletter-subscription-service"
version = "0.1.0"
description = "A FastAPI-based newsletter subscription service integrated with Resend.com for email management"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
httpx = "^0.23.0"
python-dotenv = "^0.19.0"
pydantic = "^1.8.2"
email-validator = "^1.1.3"
slowapi = "^0.1.9"
aiofiles = "^24.1.0"
apscheduler = "^3.10.4"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
